--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.6",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.3",
     "styled-components": "^5.3.6",
