--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "axios": "^1.1.3",
     "install": "^0.13.0",
     "match-sorter": "^6.3.1",
-    "npm": "^9.1.1",
     "moment": "^2.29.4",
+    "npm": "^9.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-loading": "^2.0.3",
     "react-loadingg": "^1.7.2",
     "react-query": "^3.39.2",
