--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "install": "^0.13.0",
     "match-sorter": "^6.3.1",
     "moment": "^2.29.4",
+    "next-cookies": "^2.0.3",
     "npm": "^9.1.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
